--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-mysql-session": "^3.0.1",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.4",
     "nodemon": "^3.1.0",
