--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -11,13 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-mysql-session": "^3.0.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "localtunnel": "^2.0.2",
-    "mysql2": "^3.9.4",
+    "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
