--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -17,6 +17,7 @@
     "express-mysql-session": "^3.0.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
