--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-sdk": "^1.7.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "env": "^0.0.2",
     "init": "^0.1.2",
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
