--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-aria": "^3.33.0",
     "react-bootstrap": "^2.10.2",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
