--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -1,10 +1,11 @@
 {
   "name": "teamproject",
   "version": "1.0.0",
-  "description": "",
+  "description": "git remote add origin https://github.com/Lee-chansu/shoppingMall.git",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
