productAdd delTag 클릭시 newOption 배열이 해당 요소가 삭제된 채로 다시 재배열 되도록 수정

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "create-react-app": "^5.0.1",
     "env": "^0.0.2",
     "init": "^0.1.2",
     "jwt-decode": "^4.0.0",
