--- a/package.json
+++ b/package.json
@@ -7,20 +7,27 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-sdk": "^1.7.1",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "create-react-app": "^5.0.1",
     "env": "^0.0.2",
+    "express": "^4.18.2",
+    "got": "^11.8.3",
     "init": "^0.1.2",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^4.0.0",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-aria": "^3.33.0",
     "react-bootstrap": "^2.10.2",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
