--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
