--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "data-uri-to-buffer": "^6.0.2",
     "dotenv": "^16.4.5",
