--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.11.0",
