productList 페이징 처리 완료

--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sequelize-pagination": "^1.1.0"
   }
 }
