--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -30,11 +30,13 @@
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "sequelize-pagination": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
