--- a/teamProject/package.json
+++ b/teamProject/package.json
@@ -34,9 +34,7 @@
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "sequelize-pagination": "^1.1.0",
-    "babel-preset-react-app" : "^10.1.0",
-    "@babel/plugin-proposal-private-property-in-object": "^13.13.0"
+    "sequelize-pagination": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
